--- a/.github/workflows/waka-dev-stats.yml
+++ b/.github/workflows/waka-dev-stats.yml
@@ -16,7 +16,8 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_LINES_OF_CODE: "True"
+          SHOW_EDITORS: "True"
           SHOW_OS: "True"
-          SHOW_PROJECTS: "True"
-          SHOW_LOC_CHART: "True"
+          SHOW_PROJECTS: "False"
+          SHOW_LOC_CHART: "False"
           LOCALE: "en"
