--- a/.github/workflows/waka-dev-stats.yml
+++ b/.github/workflows/waka-dev-stats.yml
@@ -1,10 +1,10 @@
 name: Waka Readme
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: # for manual workflow trigger
   schedule:
     # Runs at 00:00AM UTC
-    - cron: '0 0 * * *'
+    - cron: '0 0 * * *' 
 
 jobs:
   update-readme:
