--- a/.github/workflows/waka-dev-stats.yml
+++ b/.github/workflows/waka-dev-stats.yml
@@ -16,13 +16,13 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_TIMEZONE: "True"
-          SHOW_TOTAL_CODE_TIME: "False"
-          SHOW_DAYS_OF_WEEK: "False"
+          SHOW_TOTAL_CODE_TIME: "True"
+          SHOW_DAYS_OF_WEEK: "True"
           SHOW_PROJECTS: "False"
           SHOW_SHORT_INFO: "False"
           LOCALE: "en"
-          SHOW_PROFILE_VIEWS: "False"
-          SHOW_COMMIT: "False"
-          SHOW_LANGUAGE_PER_REPO: "False"
-          SHOW_LOC_CHART: "False"
+          SHOW_PROFILE_VIEWS: "True"
+          SHOW_COMMIT: "True"
+          SHOW_LANGUAGE_PER_REPO: "True"
+          SHOW_LOC_CHART: "True"
           SHOW_UPDATED_DATE: "False"
