--- a/.github/workflows/waka-dev-stats.yml
+++ b/.github/workflows/waka-dev-stats.yml
@@ -17,12 +17,12 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_TIMEZONE: "True"
           SHOW_TOTAL_CODE_TIME: "False"
-          SHOW_DAYS_OF_WEEK: "True"
+          SHOW_DAYS_OF_WEEK: "False"
           SHOW_PROJECTS: "False"
           SHOW_SHORT_INFO: "False"
           LOCALE: "en"
           SHOW_PROFILE_VIEWS: "False"
-          SHOW_COMMIT: "False"
+          SHOW_COMMIT: "True"
           SHOW_LANGUAGE_PER_REPO: "False"
           SHOW_LOC_CHART: "False"
           SHOW_UPDATED_DATE: "False"
